Fix images stretching on chrome

--- a/src/app/browser/picture-view/picture-view.component.css
+++ b/src/app/browser/picture-view/picture-view.component.css
@@ -35,7 +35,7 @@ mat-spinner {
   position: fixed;
 }
 
-img {
+img#picture {
   image-orientation: from-image;
   width: 100%;
   height: 100%;
@@ -76,7 +76,7 @@ img {
     margin-top: 20px;
   }
 
-  #profile-picture {
+  #picture-wrapper {
     height: 50px;
     width: 50px;
   }
@@ -102,7 +102,7 @@ img {
     margin-left: 10px;
   }
 
-  #profile-picture {
+  #picture-wrapper {
     height: 30px;
     width: 30px;
   }
@@ -128,11 +128,16 @@ img {
 }
 
 #profile-picture {
-  border-radius: 100%;
-  object-fit: cover;
-  user-select: none;
   font-size: 0;
   image-orientation: from-image;
+}
+
+#picture-wrapper {
+  border-radius: 100%;
+  overflow: hidden;
+  user-select: none;
+  display: flex;
+  align-items: center;
 }
 
 #profile-name {
