--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -24,7 +24,7 @@
   flex: 1;
 }
 
-#profile mat-card div {
+#profile mat-card div#card-content {
   flex-direction: column;
   align-items: center;
   display: flex;
@@ -64,14 +64,18 @@ mat-spinner {
 
 #picture {
   image-orientation: from-image;
+  font-size: 0;
+}
+
+#picture-wrapper {
+  overflow: hidden;
+  display: flex;
+  align-items: center;
   height: 150px;
   width: 150px;
   border-radius: 100%;
-  object-fit: cover;
-  object-position: center;
-  user-select: none;
-  font-size: 0;
   margin-top: 30px;
+  user-select: none;
 }
 
 app-browser {
